# scolear

./: ..gitignore.swp  .gitignore  README.md
angularJS/: index.html
opencv-practice/: CMakeLists.txt  main.cpp  saturation.cpp  saturation.h
opencv-practice/background_substraction/: CMakeLists.txt  main.cpp
opencv-practice/basic_image_conversions/: CMakeLists.txt  main.cpp  saturation.cpp
opencv-practice/demosaicing/: CMakeLists.txt  demosaicing.cpp  demosaicing.h  main.cpp
opencv-practice/drawing_functions/: CMakeLists.txt  color_definitions.h  main.cpp
opencv-practice/filters/: CMakeLists.txt  main.cpp
opencv-practice/find_contours/: CMakeLists.txt  main.cpp
opencv-practice/remapping/: CMakeLists.txt  main.cpp
orientation-trial-exam/: questions.txt
orientation-trial-exam/LED_control/: LED_control.atsln
orientation-trial-exam/doggo_register/: CMakeLists.txt  main.c
orientation-trial-exam/tricky_average/: CMakeLists.txt  main.c
practice/hard_beugro/: CMakeLists.txt  main.cpp
week-0/myFirstWebsite/: index.html
week-01/day-03/: CMakeLists.txt  main.cpp
week-02/day-03/drawing-workshop/: CMakeLists.txt  blinkingSquare.cpp  centerBoxFunction.cpp  centeredSquare.cpp  checkerboard.cpp  connectDots.cpp  draw.h  fourRect.cpp  horizontals.cpp  main.cpp  middleLines.cpp  positionSquare.cpp  purpleSteps3D.cpp  rainbowBox.cpp  starryNight.cpp  starryNight.h  utils.cpp  utils.h
week-02/day-04/Project-Drawing/: CMakeLists.txt  draw.h  envelopeStar.cpp  linePlay.cpp  modularLinePlay.cpp  superHexagon.cpp  triangles.cpp
week-04/day-02/InstrumentstoStringedInstruments/: BassGuitar.cpp  BassGuitar.h  CMakeLists.txt  ElectricGuitar.cpp  ElectricGuitar.h  Instrument.cpp  Instrument.h  StringedInstrument.cpp  StringedInstrument.h  Violin.cpp  Violin.h  main.cpp
week-09/day-03/: displaymagic.txt
(+560 files in other folders)
